--- a/semana1/aula6/index.css
+++ b/semana1/aula6/index.css
@@ -51,8 +51,9 @@ div img {
 }
 
 .container {
-    height: 500px;
+    height: 500px; 
     text-align: center;
+
 }
 
 .icone {
@@ -81,10 +82,11 @@ div img {
 
 #container-para-comprar>p {
     color: #c44f00;
-    padding: 100px 0;
+    padding: 10px 0;
     font-size: 60px;
+    display: block;
+    
 }
-
 
 /**
   *
