--- a/semana1/aula6/index.css
+++ b/semana1/aula6/index.css
@@ -31,6 +31,7 @@ img {
 
 div>p:first-child {
     display: inline;
+    
 }
 
 div img {
@@ -70,6 +71,7 @@ div img {
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
+    padding-top: 15%;
 }
 
 #container-de-descricao>ol {
