centralizei o texto da home colocando o p em uma div e limitando seu tamanho

--- a/semana1/aula6/index.css
+++ b/semana1/aula6/index.css
@@ -74,6 +74,11 @@ div img {
     padding-top: 15%;
 }
 
+#container-de-descricao div{  
+    width: 190px;
+    margin: auto;
+}
+
 #container-de-descricao>ol {
     padding: 15px 0px;
 }
