--- a/semana1/aula6/index.css
+++ b/semana1/aula6/index.css
@@ -34,10 +34,6 @@ div>p:first-child {
     
 }
 
-div img {
-    background: black;
-}
-
 .botao-amarelo {
     background-color: #ffaf43;
     width: 250px;
@@ -59,6 +55,7 @@ div img {
 
 .icone {
     height: 15px;
+    width: 15px;
 }
 
 
