--- a/semana1/aula6/index.css
+++ b/semana1/aula6/index.css
@@ -7,6 +7,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "Roboto";
 }
 
 h2 {
@@ -19,6 +20,9 @@ h2 {
 input {
     height: 20px;
     width: 500px;
+    border-top: 0 none;
+    border-left: 0 none;
+    border-right: 0 none;
 }
 
 button:focus {
