--- a/semana1/aula6/index.css
+++ b/semana1/aula6/index.css
@@ -107,9 +107,16 @@ div:last-child {
     text-align: center;
 }
 
+#div-tabela{
+    display: block;
+    margin: auto;
+    width: 600px;
+}
 table {
     width: 60%;
     text-align: center;
+    margin: auto;
+    width: 600px;
 }
 
 td button {
