--- a/semana1/aula6/index.css
+++ b/semana1/aula6/index.css
@@ -52,7 +52,7 @@ div>p:first-child {
 }
 
 .container {
-    height: 500px; 
+    height: 300px; 
     text-align: center;
 
 }
@@ -146,6 +146,14 @@ td button:active{
     border-radius: 5px;
     font-size: 10px;
     color: black;
+    display: block;
+    margin:auto;
+}
+#div-button{
+    padding-top: 100px;
+    display: block;
+    margin: auto;
+    width: 400px;
 }
 
 #back-button:hover {
