--- a/semana1/projeto-portfólio/styles.css
+++ b/semana1/projeto-portfólio/styles.css
@@ -119,6 +119,43 @@ main section{
 /* ==============
 ===== SOBRE MIM  ====
 ===============*/
+#section-sobre-mim{
+    display: block;
+    margin: auto;
+    width: 800px;
+    margin-top: 15%;
+  
+}
+
+#minha-foto, #texto-sobre-mim{
+    display: inline-block;
+    float: left;
+}
+#minha-foto{
+    border-radius: 50px;
+    border: 5px #1EC6D9 solid;
+    width: 30%;
+}
+#texto-sobre-mim{
+    text-align: justify;
+    width: 48%;
+    margin-left:10px; 
+}
+
+/* ==============
+===== CONTATO ====
+===============*/
+#area-formulario{
+    margin: auto;
+    display: block;
+    width: 60%;
+    margin-top: 20%;
+}
+form p{
+    margin: auto;
+    display: block;
+    width: 50%;
+}
 
 
 /* ==============
