--- a/semana1/projeto-portfólio/styles.css
+++ b/semana1/projeto-portfólio/styles.css
@@ -125,7 +125,7 @@ h2#subtitulo{
 }
 
 
-main section{
+#section-index{
     margin-left: 5%;
 }
 #codigo{
@@ -235,6 +235,76 @@ main section{
     box-shadow: 1px 1px 10px #169baa;
     opacity: 0.8;
 }
+
+    /* ==================
+    ===== dev finances  ====
+    =====================*/
+
+    #logo-dev{
+        background-color: #2d4a22;
+        padding: 30px;
+        text-align: center;
+    }
+
+    #conteudo-dev{
+        margin-top: 50px;
+        text-align: center;
+    }
+    #conteudo-dev > img{
+        width: 80%;
+        
+    }
+    #conteudo-dev figure{
+        text-align: center;
+        margin-top: 5%;
+        margin-bottom: 3%;
+    }
+    #conteudo-dev figure img{
+        width: 40%;
+        padding: 4px;
+    }
+    #conteudo-dev figure img:hover{
+        width: 45%;
+    }
+
+    #conteudo-dev div{
+        text-align: right;
+    }
+    #botao-voltar{
+        border: none;
+        font-weight: 400;
+        font-size: 18pt;
+        background-color: #1bc0d3;
+        color: white;
+        padding: 8px 30px;
+        margin-bottom: 30px;
+        border-radius: 5px;
+    }
+    #botao-voltar:hover{
+        background-color: #17a1b1;
+    }
+    #botao-voltar:active{
+        box-shadow: 1px 1px 5px black;
+    }
+
+
+    /* ==================
+    ===== dev finances  ====
+    =====================*/
+
+
+
+    
+    #logo-bordado{
+        background-color: #ddbea4;
+         padding: 30px;
+        text-align: center;
+    }
+
+    #conteudo-bordado div{
+        text-align: right;
+    }
+
 /* ==============
 ===== CONTATO ====
 ===============*/
@@ -259,6 +329,9 @@ footer{
     background-color: #15011B;
     padding: 20px;
     width: 100%;
+}
+
+.fixo{
     position: fixed;
     bottom: 0;
 }
