--- a/semana1/projeto-portfólio/styles.css
+++ b/semana1/projeto-portfólio/styles.css
@@ -100,8 +100,28 @@ h2#subtitulo{
     font-size: 12pt;
     margin: 6px 0;
 }
+.botao-azul{
+    border: none;
+    font-weight: 400;
+    font-size: 18pt;
+    background-color: #1bc0d3;
+    color: white;
+    padding: 8px 30px;
+    margin-bottom: 30px;
+    border-radius: 5px;
+}
+.botao-azul:hover{
+    background-color: #17a1b1;
+}
+.botao-azul:active{
+    box-shadow: 1px 1px 5px black;
+}
 
 #botao-index{
+    font-size: 14pt;
+    margin-top: 16px;
+}
+/* #botao-index{
     background-color: #1EC6D9;
     color: black;
     font-weight: 600;
@@ -115,7 +135,7 @@ h2#subtitulo{
     background-color: #1b0333;
     color: white;
     box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.5);
-}
+} */
 
 #avatar-index{
     width: 35%;
@@ -179,11 +199,10 @@ h2#subtitulo{
     color: rgba(255, 255, 255, 0.2);
 }
 #tagsh2{
-    margin: 20px 0 -20px -50px;
+    margin: 0 0 -20px -50px;
 }
 #tagsfh2{
     display: inline-block;
-
 }
 
 #sobre-mim div{
@@ -218,7 +237,12 @@ h2#subtitulo{
     font-size: 18pt;
     font-weight: 400;
 }
-
+#botao-sobre-mim{
+    text-align: center;
+}
+#botao-sobre-mim{
+    padding-top: 15px;
+}
 /* ==================
 ===== PROJETOS  ====
 =====================*/
@@ -302,22 +326,7 @@ h2#subtitulo{
     #conteudo-dev div{
         text-align: right;
     }
-    .botao-azul{
-        border: none;
-        font-weight: 400;
-        font-size: 18pt;
-        background-color: #1bc0d3;
-        color: white;
-        padding: 8px 30px;
-        margin-bottom: 30px;
-        border-radius: 5px;
-    }
-    .botao-azul:hover{
-        background-color: #17a1b1;
-    }
-    .botao-azul:active{
-        box-shadow: 1px 1px 5px black;
-    }
+    
 
 
     /* =========================
@@ -365,7 +374,7 @@ h2#subtitulo{
 }
 #titulo-exp p:first-child{
     text-align: left;
-    margin: 50px 0 -10px 0;
+    margin: 90px 0 -10px 0;
 }
 #titulo-exp p:last-child{
     text-align: right;
@@ -385,7 +394,7 @@ h2#subtitulo{
 
 #conteudo-exp{
     margin: auto;
-    margin-top: 60px;
+    margin-top: 70px;
 }
 #conteudo-exp table{
     width: 40%;
@@ -409,10 +418,18 @@ h2#subtitulo{
 /* ==============
 ===== CONTATO ====
 ===============*/
+#area-formulario{
+    width: 500px;
+    margin: auto;
+}
+#section-conteudo{
+    margin-top: 30px;
+}
+#section-conteudo div{
+    margin: 10px 0;
 
-
-form input, textarea{
-    width: 400px;
+}
+form input, textarea{  
     font-size: 15pt;
 }
 form input{
@@ -420,14 +437,24 @@ form input{
     border-left: none;
     border-right: none;
     border-bottom-color: #300759;
+    width: 100%;
+}
+form input:last-child{
+    width: 500px;
+}
+form {
+    display: block;
+    margin: auto;
 }
 form textarea{
     border: #300759 1px solid;
+    width: 100%;
 }
 legend{
     color: #1EC6D9;
     font-weight: 700;
     font-size: 36pt;
+    margin-top: -38px;
 }
 
 label{
@@ -453,25 +480,14 @@ textarea:focus{
     border: 0 none;
     outline: 1px solid #6e6e6e;
 }
-#area-formulario td{
-    padding: 10px 0;
-}
-#tabela{
-    display: block;
-    margin: auto;
-    width: 600px;
-}
-#area-formulario table{
-    margin: auto;
-}
+
 
 #area-formulario p:first-child{
-    margin-right: 500px;
-    margin-bottom: -10px;
+    margin-top: 50px;
 }
 
 #area-formulario p:last-child{
-    margin-left: 500px;
+    margin-left: 420px;
     margin-top: -10px;
 }
 
@@ -480,13 +496,8 @@ textarea:focus{
     text-align: center;
 }
 
-#area-formulario p{
-    margin: 20px 0;
-}
-
 #label-msg{
     display: block;
-    margin-top: -120px;
 } 
 
 
