--- a/semana2/aula8/styles.css
+++ b/semana2/aula8/styles.css
@@ -27,11 +27,6 @@ header {
     padding: 20px;
 }
 
-header img {
-    width: 30px;
-    padding-left: 5px;
-}
-
 header p {
     font-weight: 200;
 }
@@ -42,6 +37,26 @@ p, form {
 
 input {
     color: black;
+    outline: none;
+}
+
+header img {
+    width: 30px;
+    padding: 2px;
+}
+
+header img:hover {
+    opacity: 0.8;
+}
+
+header button {
+    background-color: #001324;
+    border: none;
+    padding-left: 5px;
+}
+
+header button:hover {
+    background-color: #01274756;
 }
 
 /* ================
@@ -120,13 +135,14 @@ h1 {
     outline: none;
 }
 
-button{
+.main-video button {
     background-color: #013B70;
     border: none;
     padding: 5px 40px;
     font-size: 15pt;
     margin: 0 10px 10px 0;
 }
+
 /* ================
 ===== rodapé ======
 ================ */
@@ -138,4 +154,3 @@ footer {
     justify-content: center;
     font-weight: 100;
 }
-
