--- a/semana2/aula9/styles.css
+++ b/semana2/aula9/styles.css
@@ -20,12 +20,6 @@ header {
     background: orangered;
 }
 
-/* @media screen and (max-device-width: 800px){
-    header{
-        background: green;
-    }
-} */
-
 nav {
     background: gray;
     grid-row: 1 / -1;
@@ -35,11 +29,11 @@ nav {
 }
 
 nav div:first-child {
-    padding: 0 2em 2em 1em;
+    padding: 0 2em 2em 1.5em;
 }
 
 nav div:last-child {
-    padding: 0 2em 2em 1em;
+    padding: 0 2em 2em 1.5em;
 }
 
 /* ============
@@ -51,32 +45,43 @@ main {
 }
 
 section {
-    row-gap: 1rem;
-    column-gap: 1rem;
-    margin: 2%;
-    display: grid;
+    display: flex;
 }
 
 /* === Seção 1 === */
 
 section:first-child {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    justify-content: space-around;
     height: 35%;
+    flex-direction: column;
+    margin: 0 0.5rem;
+}
+
+.primeiro-bloco {
+    height: 100%;
+    justify-content: space-between;
+    margin: 0.5rem 0;
+}
+
+.primeiro-bloco div {
+    width: 30%;
+    height: 100%;
 }
 
 /* === Seção 2 === */
 
 section:nth-child(2) {
-    grid-template-columns: repeat(2, 1fr);
+    justify-content: space-between;
     height: 35%;
+    margin: 0.5rem;
 }
 
 /* === Seção 3 === */
 
 section:last-child {
-    grid-template-columns: repeat(3, 1fr);
     height: 20%;
+    margin: 0.5rem;
+    justify-content: space-between;
 }
 
 section div {
@@ -84,6 +89,8 @@ section div {
     align-items: center;
     justify-content: center;
 }
+
+/* === Cores === */
 
 .azul {
     background: rgb(0, 162, 255);
@@ -100,8 +107,98 @@ section div {
 .preto {
     background: black;
     color: white;
+    width: 49%;
 }
 
 .borda {
     border: 1px black solid;
+    width: 30%;
+}
+
+/* === responsividade === */
+
+@media screen and (max-device-width: 1200px) {
+    /* === Seção 1 === */
+    .primeiro-bloco {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        column-gap: 1rem;
+        row-gap: 1rem;
+    }
+    .primeiro-bloco div {
+        width: 100%;
+    }
+    .verde {
+        grid-column: 1 / -1;
+    }
+    /* === Seção 3 === */
+    section:last-child {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        column-gap: 1rem;
+        row-gap: 1rem;
+    }
+    .borda {
+        width: 100%;
+    }
+    .borda:last-child {
+        grid-column: 1 / -1;
+    }
+}
+
+@media screen and (min-device-width: 421px) and (max-device-width: 800px) {
+    nav {
+        display: none;
+    }
+    body {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 4rem 1fr;
+        height: 100vh;
+    }
+}
+
+@media screen and (max-device-width: 420px) {
+    nav {
+        display: none;
+    }
+    body {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 4rem 1fr;
+        height: 100vh;
+    }
+    /* === Seção 1 === */
+    .primeiro-bloco {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 1fr);
+        column-gap: 1rem;
+        row-gap: 1rem;
+    }
+    /* === Seção 2 === */
+    section:nth-child(2) {
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: 1fr;
+        row-gap: 1rem;
+    }
+    .preto {
+        background: black;
+        color: white;
+        width: 100%;
+    }
+    /* === Seção 1 === */
+    section:last-child {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 1fr);
+        column-gap: 1rem;
+        row-gap: 1rem;
+    }
+    .borda {
+        width: 100%;
+    }
 }
