--- a/semana2/aula9/styles.css
+++ b/semana2/aula9/styles.css
@@ -41,11 +41,17 @@ nav div:last-child {
 ============ */
 
 main {
+    width: 95%;
+    margin: auto;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 section {
     display: flex;
+    margin: 0.5rem 0;
 }
 
 /* === Seção 1 === */
@@ -54,7 +60,6 @@ section:first-child {
     justify-content: space-around;
     height: 35%;
     flex-direction: column;
-    margin: 0 0.5rem;
 }
 
 .primeiro-bloco {
@@ -73,15 +78,14 @@ section:first-child {
 section:nth-child(2) {
     justify-content: space-between;
     height: 35%;
-    margin: 0.5rem;
 }
 
 /* === Seção 3 === */
 
 section:last-child {
     height: 20%;
-    margin: 0.5rem;
     justify-content: space-between;
+    margin: 0.5rem 0;
 }
 
 section div {
@@ -123,8 +127,8 @@ section div {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
-        column-gap: 1rem;
-        row-gap: 1rem;
+        column-gap: 0.5rem;
+        row-gap: 0.5rem;
     }
     .primeiro-bloco div {
         width: 100%;
@@ -137,8 +141,8 @@ section div {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
-        column-gap: 1rem;
-        row-gap: 1rem;
+        column-gap: 0.5rem;
+        row-gap: 0.5rem;
     }
     .borda {
         width: 100%;
@@ -175,15 +179,15 @@ section div {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(3, 1fr);
-        column-gap: 1rem;
-        row-gap: 1rem;
+        column-gap: 0.5rem;
+        row-gap: 0.5rem;
     }
     /* === Seção 2 === */
     section:nth-child(2) {
         display: grid;
         grid-template-rows: repeat(2, 1fr);
         grid-template-columns: 1fr;
-        row-gap: 1rem;
+        row-gap: 0.5rem;
     }
     .preto {
         background: black;
