--- a/semana2/aula9/styles.css
+++ b/semana2/aula9/styles.css
@@ -23,16 +23,9 @@ header {
 nav {
     background: gray;
     grid-row: 1 / -1;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
 }
 
-nav div:first-child {
-    padding: 0 2em 2em 1.5em;
-}
-
-nav div:last-child {
+ nav div {
     padding: 0 2em 2em 1.5em;
 }
 
@@ -44,54 +37,42 @@ main {
     width: 95%;
     margin: auto;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 section {
-    display: flex;
-    margin: 0.5rem 0;
+    margin: 1rem 0;
+    display: grid;
+    row-gap: 0.5rem;
+    column-gap: 0.5rem;
+}
+
+section div {
+    display: grid;
+    align-items: center;
+    justify-content: center;
 }
 
 /* === Seção 1 === */
 
 section:first-child {
-    justify-content: space-around;
     height: 35%;
-    flex-direction: column;
-}
-
-.primeiro-bloco {
-    height: 100%;
-    justify-content: space-between;
-    margin: 0.5rem 0;
-}
-
-.primeiro-bloco div {
-    width: 30%;
-    height: 100%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
 }
 
 /* === Seção 2 === */
 
 section:nth-child(2) {
-    justify-content: space-between;
     height: 35%;
+    grid-template-columns: repeat(2, 1fr);
+    
 }
 
 /* === Seção 3 === */
 
 section:last-child {
     height: 20%;
-    justify-content: space-between;
-    margin: 0.5rem 0;
-}
-
-section div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 /* === Cores === */
@@ -111,45 +92,32 @@ section div {
 .preto {
     background: black;
     color: white;
-    width: 49%;
 }
 
 .borda {
     border: 1px black solid;
-    width: 30%;
 }
 
 /* === responsividade === */
 
 @media screen and (max-device-width: 1200px) {
     /* === Seção 1 === */
-    .primeiro-bloco {
-        display: grid;
+    section:first-child{
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        column-gap: 0.5rem;
-        row-gap: 0.5rem;
+        grid-template-rows: repeat(4, 1fr);
     }
-    .primeiro-bloco div {
-        width: 100%;
-    }
-    .verde {
+    .verde{
         grid-column: 1 / -1;
     }
+   
     /* === Seção 3 === */
     section:last-child {
-        display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
-        column-gap: 0.5rem;
-        row-gap: 0.5rem;
-    }
-    .borda {
-        width: 100%;
     }
     .borda:last-child {
         grid-column: 1 / -1;
-    }
+    } 
 }
 
 @media screen and (min-device-width: 421px) and (max-device-width: 800px) {
@@ -157,10 +125,8 @@ section div {
         display: none;
     }
     body {
-        display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 4rem 1fr;
-        height: 100vh;
     }
 }
 
@@ -169,40 +135,25 @@ section div {
         display: none;
     }
     body {
-        display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 4rem 1fr;
-        height: 100vh;
     }
+    
     /* === Seção 1 === */
-    .primeiro-bloco {
-        display: grid;
+    section:first-child{
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(3, 1fr);
-        column-gap: 0.5rem;
-        row-gap: 0.5rem;
+        grid-template-rows: repeat(6, 1fr);
     }
     /* === Seção 2 === */
     section:nth-child(2) {
-        display: grid;
         grid-template-rows: repeat(2, 1fr);
         grid-template-columns: 1fr;
-        row-gap: 0.5rem;
     }
-    .preto {
-        background: black;
-        color: white;
-        width: 100%;
-    }
+    
     /* === Seção 1 === */
     section:last-child {
-        display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(3, 1fr);
-        column-gap: 1rem;
-        row-gap: 1rem;
     }
-    .borda {
-        width: 100%;
-    }
+    
 }
