Mudança na opção de concluir

--- a/semana4/aula15/planner/styles.css
+++ b/semana4/aula15/planner/styles.css
@@ -131,6 +131,7 @@ section {
 
 .concluida {
     text-decoration: line-through;
+    color: #333;
 }
 
 /* ==================== itens da lista ================== */
