--- a/semana5/aula18/labetube/src/App.css
+++ b/semana5/aula18/labetube/src/App.css
@@ -1,5 +1,7 @@
 :root{
   --cinzaClaro: rgb(204, 203, 203);
+  --cinzaClaroTransparente: rgba(128, 128, 128, 0.3);
+
 }
 
 body {
@@ -20,12 +22,13 @@ body {
 /* ============= cabeçalho ============ */
 header {
   grid-column: 2 / 3;
+  grid-row: 1 / 2;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
   
-  
-  padding: 0 0.5rem;
+  padding: 1rem;
 }
 
 #logo{
@@ -79,7 +82,7 @@ div#campo-pesquisa{
   box-shadow: 0 0 0 0;
   border: none;
   
-  outline: 1px var(--cinzaClaro) solid;
+  outline: 1px gray solid;
   border-radius: 0;
   
 }
@@ -97,12 +100,14 @@ div#campo-pesquisa{
 a{
   cursor: pointer;
 }
-/* ============== menu ================= */
+
+/* ============== menu fechado ================= */
 .icones-menu{
   width: 1.5rem;
 }
 .menu-vertical div:first-child{
   margin-bottom: 1rem;
+  width: 40%;
 }
 
 .menu-vertical {
@@ -113,10 +118,12 @@ a{
   align-items: center;
   padding: 0.2rem 0.5rem;
 
+  position: fixed;
+  width: 10%;
 }
 
 .divs-menu{
-  width: 80%;
+  margin: 1.2rem 0;
 }
 
 .divs-menu a{
@@ -125,11 +132,11 @@ a{
   justify-content: center;
   align-items: center;
 
-  margin: 1.2rem 0;
+  padding: 0.5rem 0.8rem;
 }
 
 .divs-menu:hover{
-  background-color: var(--cinzaClaro);
+  background-color: var(--cinzaClaroTransparente);
   border-radius: 100%;
 
   cursor: pointer;
@@ -143,15 +150,106 @@ a{
 hr{
   width: 100%;
 }
+/* ============= menu aberto =============== */
+.menu-aberto{
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+
+  
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+
+
+  opacity: 0;
+  visibility: hidden;
+
+  z-index: 999;
+}
+
+.ativado{
+  opacity: 1;
+  visibility: visible;
+}
+
+.menu{
+  background-color: white;
+  width: 20%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  padding: 1rem;
+}
+
+#div-icone-fechar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#div-icone-fechar a:hover{
+  border-radius: 100px;
+}
+
+#div-icone-fechar a{
+  width: 12%;
+
+}
+#logo-menu-aberto{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#logo-menu-aberto img{
+  width: 20%;
+}
+
+#logo-menu-aberto h1{
+  font-size: 1.5rem;
+  margin-left: -1.5rem;
+}
+
+.menu hr{
+  width: 50%;
+}
+
+.divs-menu-aberto{
+  padding: 0.3rem;
+}
+
+.divs-menu-aberto a{
+  display: flex;
+  align-items: center;
+  padding: 0.3rem 0.5rem;
+  border-radius: 2px;
+
+}
+
+.divs-menu-aberto a:hover{
+  background-color: var(--cinzaClaroTransparente);
+}
+
+
+.divs-menu-aberto img{
+  padding: 0.2rem 1.5rem 0.2rem 0;
+}
+
 
 /* ================ main =============== */
+main{
+  grid-column: 2 / -1;
+  grid-row: 2 / -1;
+}
+
 .painel-de-videos {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(3, 1fr);
 
   padding: 1rem;
-  gap: 1rem 1.5rem;
+  gap: 0.8rem 1.0rem;
 }
 
 .box-pagina-principal{
@@ -160,6 +258,7 @@ hr{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 0.5rem;
 }
 
 .box-pagina-principal img {
@@ -170,4 +269,9 @@ hr{
 .box-pagina-principal p{
   margin-top: -1.2rem;
   color: gray;
+}
+
+.box-pagina-principal:hover{
+  background-color: var(--cinzaClaro);
+  border-radius: 2px;
 }
