--- a/semana5/aula20-classe/src/components/Post/Post.css
+++ b/semana5/aula20-classe/src/components/Post/Post.css
@@ -7,10 +7,15 @@
 .post-header {
     height: 40px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     padding: 0 10px;
 }
 
+.infos-usuario{
+    display: flex;
+    align-items: center;
+}
 
 .post-footer {
     height: 40px;
